# satie-cross-modal

./: .gitignore  .zenodo.json  CITATION.cff  CLAUDE.md  CLAUDE_CODE_PROMPT.md  LICENSE  README.md  index.html  pyproject.toml  style.css
docs/: Sonorous_Brushstrokes_v3_EN.docx  Sonorous_Brushstrokes_v3_KO.docx
notebooks/: build_v4_docx.ps1  build_v4_leonardo.ps1  colab_run.ipynb
site/: index.html
src/: __init__.py  audio.py  bridge.py  generate.py  pipeline.py  prompts.py
